Basic hookup of spell detail